fix: no spacing in a/img combo in result list

--- a/app/assets/stylesheets/partials/_real_estates.css.sass
+++ b/app/assets/stylesheets/partials/_real_estates.css.sass
@@ -23,8 +23,10 @@ td
   line-height: 15px
   border-bottom: solid
   border-color: $search-background-color
+  
   &:first-child
     padding: 0
+    line-height: 0
 
 .detail
   background: $search-background-color
